Configurando botón Salir.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -55,6 +55,7 @@
                 android:id="@+id/button8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="salirApp"
                 android:text="@string/rSalir"
                 android:textAllCaps="false" />
         </TableRow>
