--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -35,6 +35,7 @@
                 android:id="@+id/button5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="ejecutarInfo"
                 android:text="@string/rConfig"
                 android:textAllCaps="false" />
         </TableRow>
